# pglis

./: .gitignore  README.md  examples.ipynb  pyproject.toml  setup.py  test.ipynb
pglis/: .gitignore  __init__.py  functions.py  model.py  utils_data_model.py  utils_data_ssn.py
pglis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pglis/data_products/: .zenodo_version  SSN.csv
pglis/data_products/Aneg/: pglis_Aneg_Z01.csv  pglis_Aneg_Z02.csv  pglis_Aneg_Z03.csv  pglis_Aneg_Z04.csv  pglis_Aneg_Z05.csv  pglis_Aneg_Z06.csv  pglis_Aneg_Z07.csv  pglis_Aneg_Z08.csv  pglis_Aneg_Z09.csv  pglis_Aneg_Z10.csv  pglis_Aneg_Z11.csv  pglis_Aneg_Z12.csv  pglis_Aneg_Z13.csv  pglis_Aneg_Z14.csv  pglis_Aneg_Z15.csv  pglis_Aneg_Z17.csv  pglis_Aneg_Z20.csv  pglis_Aneg_Z21.csv  pglis_Aneg_Z22.csv  pglis_Aneg_Z23.csv  pglis_Aneg_Z24.csv  pglis_Aneg_Z25.csv  pglis_Aneg_Z26.csv  pglis_Aneg_Z27.csv
pglis/data_products/Apos/: pglis_Apos_Z01.csv  pglis_Apos_Z02.csv  pglis_Apos_Z03.csv  pglis_Apos_Z04.csv  pglis_Apos_Z05.csv  pglis_Apos_Z06.csv  pglis_Apos_Z07.csv  pglis_Apos_Z08.csv  pglis_Apos_Z09.csv  pglis_Apos_Z10.csv  pglis_Apos_Z11.csv  pglis_Apos_Z12.csv  pglis_Apos_Z13.csv  pglis_Apos_Z14.csv  pglis_Apos_Z15.csv  pglis_Apos_Z17.csv  pglis_Apos_Z20.csv  pglis_Apos_Z21.csv  pglis_Apos_Z22.csv  pglis_Apos_Z23.csv  pglis_Apos_Z24.csv  pglis_Apos_Z25.csv  pglis_Apos_Z26.csv  pglis_Apos_Z27.csv
src/pglis/: cleanup.py  model.py  utils_data_model.py  utils_data_ssn.py
