[build-system]
requires = [
    "setuptools",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "platformdirs",
]
build-backend = "setuptools.build_meta"

[project]
name = "pglis"
version = "1.0.1"
description = "PGLIS solar-modulated galactic cosmic-ray flux model"

authors = [
    { name = "David Pelosi", email = "david.pelosi@pg.infn.it" },
    { name = "Miguel Orcinha", email = "orcinha@pg.infn.it" },
    { name = "Bruna Bertucci" },
    { name = "Fernando Barão" },
    { name = "Emanuele Fiandrini" },
    { name = "Nicola Tomassetti" },
]
maintainers = [
    { name = "David Pelosi", email = "david.pelosi@pg.infn.it" },
    { name = "Miguel Orcinha", email = "orcinha@pg.infn.it" },
]

readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/pglis-team/PgLis"
Issues = "https://github.com/pglis-team/PgLis/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pglis-cleanup = "pglis.cleanup:main"
